kubernetes/platform/gitea/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    aetheriscloud.fr/tier: platform
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
